# RowanWeb

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/meta_macros/: Cargo.toml
backend/meta_macros/src/: lib.rs
backend/migration/: Cargo.toml  README.md
backend/migration/src/: lib.rs  m20250723_235336_create_notes_metadata_table.rs  m20250724_002939_create_comments_table.rs  m20250724_013111_create_visitor_profiles_table.rs  m20250724_014021_create_friends_links_table.rs  m20250724_015502_create_likes_table.rs  m20250724_035017_create_essays_table.rs
backend/src/: api.rs  config.rs  error.rs  main.rs  models.rs  schema.rs  service.rs
backend/src/api/: auth_handler.rs  comment_handler.rs  note_handler.rs
backend/src/infra/: db.rs  repositories.rs
backend/src/infra/db/: entities.rs
backend/src/infra/db/entities/: comments.rs  essays.rs  likes.rs  notes_metadata.rs  prelude.rs  visitor_profiles.rs
backend/src/infra/repositories/: comment_repo.rs  mod.rs  note_repo.rs  user_repo.rs
backend/src/models/: comment.rs  comments.rs  dtos.rs  friends_links.rs  likes.rs  note.rs  notes_metadata.rs  prelude.rs  user.rs  visitor_profiles.rs
backend/src/service/: auth_service.rs  comment_service.rs  note_service.rs
frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts  auth.ts
scripts/: build.ps1  dev.ps1  migrate.ps1
