[package]
name = "rowan-web-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework (Latest Axum)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# Database and ORM (Latest SeaORM)
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Authentication and security
jsonwebtoken = "9.3"
bcrypt = "0.15"
argon2 = "0.5"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
