[package]
name = "rowan-web-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.13", features = ["sqlx", "runtime-tokio-rustls", "macros", "sqlx-sqlite", "with-chrono", "with-uuid"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"

[dev-dependencies]
sea-orm-cli = "1.1.13"

